GNOME Bugzilla – Bug 786492
Incorrect scaling factor with Vulkan on Wayland
Last modified: 2017-08-18 23:49:11 UTC
Created attachment 357931 [details] [review] gdk: wayland: always set buffer scale on size update Obvious missing call :)
Attachment 357931 [details] pushed as fddfb60 - gdk: wayland: always set buffer scale on size update